--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://joaosgomes.github.io/gohugo/'
 languageCode = 'en-us'
 title = 'gohugo'
 theme = 'whiteplain'
